realtime works but distorted

--- a/ai-dev-server/static/voice-realtime.html
+++ b/ai-dev-server/static/voice-realtime.html
@@ -53,6 +53,6 @@
         </div>
     </div>
 
-    <script src="/voice/static/voice-realtime.js"></script>
+    <script src="/voice/static/voice-realtime.js?v=1725409999999"></script>
 </body>
 </html>
